# deep

./: .gitignore  CLAUDE.md
analysis/bam/: 00-comprehensive-az.md  01-initialization-flow.md  02-io-read-flow.md  03-cache-mechanism.md  04-parallel-queue.md  05-dma-mapping.md  06-kernel-module.md  07-multi-ssd-scaling.md  08-api-reference.md  09-thread-to-sq-mapping.md  10-driver-architecture.md  11-fio-plugin.md  12-kernel-module-to-block-benchmark-flow.md  13-data-structure-relationships.md  14-cudaHostRegister-mechanism.md  15-cpu-mmu-vs-gpu-mmu.md  16-block-benchmark-10level-function-graph.md  README.md  block-benchmark-kernels.md
analysis/drgn/: 02-program-memory.md  03-debuginfo-dwarf.md  04-type-language.md  05-object.md  06-linux-kernel.md  07-stack-arch.md  08-python-c-binding.md  09-python-helpers-cli.md  drgn-codebase-overview.md
analysis/gids/: 00-comprehensive-architecture.md  01-initialization-flow.md  02-feature-read-flow.md  03-cache-and-cpu-buffer.md  04-window-buffering-and-accumulator.md  05-dgl-integration.md  06-heterogeneous-graph-support.md  07-bam-vs-gids-comparison.md  08-training-pipeline-e2e.md  09-api-reference.md  README.md  gids-complete-architecture.md  gids-ssd-write-flow.md  gids-workload-analysis.md
analysis/gpgpu-sim/: 00_gpu_architecture_fundamentals.md  01_architecture_overview.md  04_interconnect_network.md  06_io_flow_analysis.md  08_power_model_accelwattch.md  README.md  abstract_hardware_model_h_annotated.md  shader_cc_annotated.cc  (+1 more)
notes/: curriculum-io-flow-1year.md  gpu-nvme-optimization-history.md  gpu.md  nvidia-developer-resources.md  nvme_driver.md
papers/: README.md
scripts/: annotate_cacti.py  bam-block-bench-sequence.drawio  bam-gpu-initiated-sequence.drawio  bam-init-sequence.drawio  km_crawl.py  km_pages.txt  nvme-ioctl-sequence.drawio
sources/bam/benchmarks/block/: CMakeLists.txt  benchmark.sh  main.cu  test.sh
sources/bam/benchmarks/iodepth-block/: CMakeLists.txt  benchmark.sh  test.sh
(+4259 files in other folders)
